# CW-Console-Bot

./: .gitignore  423423.py  53453.py  LICENSE  README.md  adressbook.py  command_parser.py  consolebot.drawio  file_parser.py  main.py  notebook.py  setup.cfg
console_bot/: Untitled Diagram.drawio  adressbook.py  command_parser.py  file_parser.py  main.py  notebook.py
fp/: normalize.py  parser.py
