[metadata]
name = CW-Core6-consolebot
version = 0.1.0
author = IBO-Py
author_email = olexandr.samus.2004@gmail.com
description = Console bot for interaction with adressbook, notes, sorting files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/LeadShadow/CW-Console-Bot
project_urls =
    Bug Tracker = https://github.com/LeadShadow/CW-Console-Bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    colorama
    Pygments
    prompt-toolkit

[options.entry_points]
console_scripts =
    consolebot = console_bot.main:start
